fixing spacing

--- a/genie.css
+++ b/genie.css
@@ -627,7 +627,7 @@ h1 {
 }
 
 .sketchcustom {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .wireframecustom {
